--- a/factors_combinators/package.json
+++ b/factors_combinators/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint",
     "vercel-build": "next build"
   },
+  "engines": {
+    "node": "18"
+  },
   "dependencies": {
     "next": "^15.1.7",
     "react": "^19.0.0",
@@ -20,6 +23,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.1.7",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "next": "^15.1.7"
   }
 }
